--- a/package.json
+++ b/package.json
@@ -6,52 +6,11 @@
   "license": "none",
   "private": true,
   "scripts": {
-    "watch": "concurrently --kill-others \"npm:watch-*\"",
-    "watch-tsc": "tsc -w",
-    "watch-nodemon": "nodemon --watch dist dist/index.js",
     "test": "jest"
   },
-  "dependencies": {
-    "apollo-server-koa": "2.0.3",
-    "camelcase-keys": "^4.2.0",
-    "dataloader": "^1.4.0",
-    "graphql": "^0.13.2",
-    "graphql-iso-date": "^3.5.0",
-    "graphql-tools": "^3.0.4",
-    "graphql-type-json": "^0.2.1",
-    "jwks-rsa": "^1.3.0",
-    "knex": "^0.15.0",
-    "koa": "^2.5.1",
-    "koa-bodyparser": "^4.2.1",
-    "koa-jwt": "^3.3.2",
-    "koa-router": "^7.4.0",
-    "libphonenumber-js": "^1.4.2",
-    "pg": "^7.4.3",
-    "raven": "^2.6.3",
-    "snakecase-keys": "^1.2.0",
-    "ts-option": "^1.1.5",
-    "uuid": "^3.3.2",
-    "yup": "^0.26.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/camelcase-keys": "^4.0.0",
-    "@types/graphql": "^0.13.1",
-    "@types/graphql-iso-date": "^3.3.0",
-    "@types/graphql-type-json": "^0.1.2",
-    "@types/jest": "^23.1.2",
-    "@types/knex": "^0.14.15",
-    "@types/koa": "^2.0.46",
-    "@types/koa-bodyparser": "^5.0.0",
-    "@types/koa-router": "^7.0.30",
-    "@types/raven": "^2.5.1",
-    "@types/uuid": "^3.4.3",
-    "@types/yup": "^0.24.9",
-    "concurrently": "^3.6.0",
     "jest": "^23.2.0",
-    "mock-jwks": "^0.1.6",
-    "nock": "9.2.3",
-    "nodemon": "^1.17.5",
-    "supertest": "^3.1.0",
     "ts-jest": "^23.1.4",
     "typescript": "^3.0.1"
   },
